test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/compound_initializer_too_long_static.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  }
  ;
  return
  identifier(arr)
  [
  const int(2)
  ]
  ;
  }
